# Threat_Modelling

./: README.md  install.bat  install.sh  pyproject.toml  threatmod-cli.bat  threatmod-gui.bat  threatmod-gui.sh
examples/: QuickTest.mdj  marine_ship_dynamic_architectures.md  marine_ship_engine_control.yaml  marine_ship_port_cargo_operations.yaml  marine_ship_remote_maintenance.yaml  test-fragment.mfj  test-sample.mdj  test-sample.puml  vehicle_gateway.puml
output/: ai-review.json  architecture-review.md  risks.json  risks.xlsx  stats.json  tags.xlsx  technical-assets.json  threagile-model.yaml  threagile.yaml
output/Marine_Bridge_Navigation/: stats.json  tags.xlsx  technical-assets.json  threagile.yaml
output/Marine_Emergency_Mode/: risks.json  risks.xlsx  stats.json  tags.xlsx  technical-assets.json  threagile.yaml
output/Marine_General/: risks.json  risks.xlsx
output/test-runner/: threagile-model.yaml
output/test-runner-docker/: threagile-model.yaml
output/test-runner-mdj/: architecture-review.md  threagile-model.yaml
output/test-runner-mfj/: architecture-review.md  threagile.yaml
output/threagile-result(1)/: stats.json  tags.xlsx  technical-assets.json  threagile.yaml
output/threagile-result(2)/: risks.json  risks.xlsx
src/threatmod_automation/: __init__.py  ai_review.py  cli.py  gui.py  guidance.py  models.py  parser.py  runner.py  threagile.py  yaml_template.txt  yaml_writer.py
src/threatmod_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pipeline.py
