[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threatmod-automation"
version = "0.1.0"
description = "Transform UML architecture descriptions into Threagile-oriented YAML and standards coverage guidance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
threatmod = "threatmod_automation.cli:main"
threatmod-gui = "threatmod_automation.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
